2009-07-05	Mike Massonnet
Add French documentation

2009-07-04	Mike Massonnet
Use LC_MESSAGES to show the help in the user locale

	- panel-plugin/xfce4-clipman-settings.c:
		Use LC_MESSAGES as LC_ALL isn't always set (fix bug #5524).

2009-07-04	Mike Massonnet
Update documentation

2009-07-04	Mike Massonnet
Update NEWS and bump release to 1.1.0

2009-07-04	Mike Massonnet
Add daemon to Makefile.am

2009-07-04	Mike Massonnet
Return proper error code

	- panel-plugin/xfce4-clipman-settings.c:
		In case the unique command is not handled return
		UNIQUE_RESPONSE_PASSTHROUGH.

2009-07-04	Mike Massonnet
Unique settings dialog

	- configure.ac.in:
		Add optional dependency on libunique.
	- panel-plugin/xfce4-clipman-settings.c:
		Make the settings dialog unique and send the activate command
		if a running instance is found to present the existing window.

2009-07-04	Mike Massonnet
Drop size callback from status icon

	- panel-plugin/main-status-icon.c:
		Remove the callback size_changed from the status icon. It has
		a bug with the KDE notification area where the size is getting
		smaller and smaller until something like 2 pixels...

2009-07-04	Mike Massonnet
Update test program test_action.c

2009-07-04	Mike Massonnet
Add groups to ClipmanActions

	- panel-plugin/actions.c:
		New function clipman_actions_set_group to change a group of a
		given action identified by its human readable name.
		On action match check for the group (-1 means all the groups).
		Save/load the group to/from the xml file.
	- panel-plugin/collector.c:
		On default clipboard change, get a match from actions with
		group "manual".
	- panel-plugin/xfce4-clipman-settings.c,
	panel-plugin/settings-dialog.glade:
		Show the toggle button "only on manual copy".

2009-07-02	Mike Massonnet
Add a real good daemon

	- configure.ac.in, daemon/*:
		Add the clipboard manager daemon from gnome-settings-daemon.
		It makes a copy of all TARGETs and uses them to restore a
		clipboard before it is going empty.